--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,39 +1,29 @@
-input[type="file"] {
-    display: block;
-  }
-  .imageThumb {
-    max-height: 75px;
-    border: 2px solid;
-    padding: 1px;
-    cursor: pointer;
-  }
-  .pip {
-    display: inline-block;
-    margin: 10px 10px 0 0;
-  }
-  .remove {
-    display: block;
-    background: #444;
-    border: 1px solid black;
-    color: white;
-    text-align: center;
-    cursor: pointer;
-  }
-  .remove:hover {
-    background: white;
-    color: black;
-  }
-  .image {
-    position: relative;
-  }
-  
-  .image .actions {
-    right: 1em;
-    top: 1em;
-    display: block;
-    position: absolute;
-  }
-  
-  .image .actions a {
-    display: inline-block;
-  }
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.dnd {
+  width: 100%;
+  height: 350px;
+
+  display: flex;
+
+  cursor: pointer;
+
+  background-color: aqua;
+  justify-content: center;
+  align-items: center;
+}
+
+img {
+  width: 100px;
+  height: 100px;
+}
+
+span {
+  cursor: pointer !important;
+  position: relative;
+  bottom: 100%;
+}
